# ns

./: .gitignore  README.md  android_install.py  ns.py  pyproject.toml  requirements.txt
